# rabbit-hole

./: .env.example  .gitignore  API.md  CLAUDE.md  CONTEXT.md  USAGE.md  docker-compose.yml  pyproject.toml
.claude/agents/: architect.md  distiller.md  editor.md  researcher.md  reviewer.md  weaver.md  writer.md
.claude/skills/new-constellation/: SKILL.md
.claude/skills/verify/: SKILL.md
.scratch/claude-code-runtime/: PRD.md
.scratch/claude-code-runtime/issues/: 01-harness-cli-skeleton-and-guardrail-commands.md  02-fetch-and-verdict-commands.md  (+3 more)
.scratch/consumption-app/: PRD.md
.scratch/content-graph/: PRD.md
.scratch/daily-feature-curation/: PRD.md
.scratch/generation-harness/: PRD.md
.scratch/production-llm-adapter/: PRD.md
docs/: content-harness.md  experience.md  new-constellation-guide.md  running-a-generation-run.md  taxonomy.md
docs/adr/: 0001-decouple-internal-and-ui-vocabulary.md  0002-taxonomy-and-content-graph-are-separate.md  0003-plan-first-generation.md  0004-human-ratified-learning-loop.md  0005-closed-book-grounding.md  0006-generation-and-consumption-are-separate.md  0007-visual-provenance-sourced-or-data-grounded.md  0008-sessions-instrumented-from-v1.md  0009-retention-earned-not-gamified.md  0010-content-generation-pipeline-architecture.md  0011-harness-tools-are-ports-web-sourcing-recall-first.md  0012-publish-gate-rewire-and-reqa-approved-subset.md  0013-human-review-surface-is-the-file-workspace.md  0014-harness-code-lives-in-src-harness.md  0015-one-backend-deployable-http-api.md  0016-production-llm-adapter-and-bounded-worker-agents.md  0017-decode-authority-and-inlined-revise-loops.md  0018-one-database-logical-separation.md  0019-claude-code-generation-runtime-and-shared-harness-cli.md
docs/agents/: README.md  domain.md
harness/: manifest.toml
harness/agents/: README.md
harness/briefs/: TEMPLATE.md
harness/editorial/: dna.md
harness/guardrails/: connection.md  constellation.md  piece.md  sourcing.md
scripts/: gen.py
src/api/: __init__.py  admin.py  app.py  config.py  dependencies.py  dtos.py  errors.py  generation.py  harness_runner.py  identity.py  main.py  reader.py
src/consumption/: __init__.py  config.py
src/content_graph/: __init__.py  config.py  seed.py
src/harness/: __init__.py  cli.py  config.py  distiller.py  errors.py  manifest.py  specs.py  workspace.py
tests/api/: conftest.py  test_admin_api.py  test_generation_wiring.py  test_harness_trigger_integration.py  test_identity.py  test_import_boundary.py  test_reader_api.py
tests/consumption/: clock.py  conftest.py  fixture_constellation.py  test_boundary_and_vocabulary.py  test_daily_feature_and_read.py  test_journey_pull_backtrack.py  test_leave_and_resume.py  test_tapestry.py
tests/contract/: conftest.py  test_connections.py  test_daily_feature.py  test_generation_read_surface.py  test_migrate_durability.py  test_piece_round_trip.py  test_piece_summaries.py  test_publish_durability.py  test_seed_taxonomy.py  test_topics_dag.py
tests/domain/: test_blocks.py  test_connection.py
tests/harness/: conftest.py  fixture_run.py  test_agent_cards.py  test_cli.py  test_distiller.py  test_llm_config.py  test_run_agent_seam.py
tests/seed/: test_parse_taxonomy.py
(+175 files in other folders)
