[project]
name = "rabbit-hole"
version = "0.1.0"
description = "Rabbit Hole — curated content traversed through Connections; this package holds the Content Graph."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "langgraph>=1.2.7",
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "uvicorn[standard]>=0.50.0",
]

[project.optional-dependencies]
web = ["playwright>=1.40"]
llm = ["langchain-deepseek>=1.1", "langchain>=1.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/content_graph", "src/harness", "src/consumption", "src/api"]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "mypy>=1.14",
    "ruff>=0.9",
    "httpx>=0.28.1",
    "langchain-deepseek>=1.1",
    "langchain>=1.3",
]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "D"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D"]

[tool.mypy]
strict = true
files = ["src"]

[[tool.mypy.overrides]]
module = ["playwright.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
